fix layout issues

--- a/responsive_design/02-1-styles.css
+++ b/responsive_design/02-1-styles.css
@@ -47,7 +47,7 @@
     --line-height-big: 1.8;
 
     /** SECTION **/
-    --section-padding: 5rem 0;
+    --section-padding: 5rem 1.5rem;
     --section-header-padding: 0 0 3rem;
     --section-header-align: center;
     --section-title-font-size: var(--font-size-xx-large);
@@ -176,6 +176,10 @@
     clip: rect(1px, 1px, 1px, 1px);
     white-space: nowrap;
   }
+  main img {
+    width: 100%;
+    height: auto;
+  }
 
   /*** 2. LAYOUT ***/
 
@@ -211,6 +215,25 @@
 
   .col-1-2 {
     width: calc((100% / 2) - 2rem);
+  }
+  @media (max-width: 767px) {
+    :root{
+      --section-padding: 5rem 1.5rem;
+      --section-body-padding: 2rem 0 0;
+    }
+    .ul-row, .row{
+      flex-direction: column;
+      margin: 0;
+    }
+    [class^="col-"] {
+      margin: 0 0 3rem 0;
+    }
+    .col-1-2, .col-1-3 {
+      width: 100%;
+    }
+
+
+
   }
 
   /* Navbar
@@ -260,6 +283,12 @@
   .nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
+  }
+  @media (max-width: 767px) {
+    .navbar-menu{
+      display: none;
+    }
+
   }
 
   /* Header
@@ -398,6 +427,13 @@
 
   .section-latest-news .row {
     flex-direction: row-reverse;
+  }
+
+  @media (max-width: 767px) {
+    .section-latest-news .row {
+      flex-direction: column;
+    }
+
   }
 
   /* Section SERVICES
